--- a/carrental-backend/src/main/resources/application.properties
+++ b/carrental-backend/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=carrental
-spring.datasource.url=jdbc:mysql://localhost:3306/carrental
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-server.port=8081
-
-
+# Database configuration - can be overridden by environment variables
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://mysql:3306/carrental}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
+server.port=${SERVER_PORT:8080}
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
